@@ -265,6 +265,7 @@ static int inner2_loop (hashcat_ctx_t *hashcat_ctx)
   }
 
   if ((status_ctx->devices_status != STATUS_CRACKED)
+   && (status_ctx->devices_status != STATUS_ERROR)
    && (status_ctx->devices_status != STATUS_ABORTED)
    && (status_ctx->devices_status != STATUS_ABORTED_CHECKPOINT)
    && (status_ctx->devices_status != STATUS_ABORTED_RUNTIME)
@@ -1239,6 +1240,7 @@ int hashcat_session_execute (hashcat_ctx_t *hashcat_ctx)
     if (status_ctx->devices_status == STATUS_QUIT)                rc_final = 2;
     if (status_ctx->devices_status == STATUS_EXHAUSTED)           rc_final = 1;
     if (status_ctx->devices_status == STATUS_CRACKED)             rc_final = 0;
+    if (status_ctx->devices_status == STATUS_ERROR)               rc_final = -1;
   }
 
   // done
